lld/test/core/error-atom-undefined-wrong-attribue.objtxt
# RUN: not lld -core %s 2> %t.err
# RUN: FileCheck %s < %t.err

#
# Test that a defined attribute on an undefined atom produces a readable error.
#

---
undefined-atoms:
    - name:         foo
      type:         code
  
...


# CHECK: error: unknown key 'type'

